small styling fixes to improve spacing with various elements

--- a/app/assets/stylesheets/ConversationDetails.scss
+++ b/app/assets/stylesheets/ConversationDetails.scss
@@ -2,6 +2,7 @@
 
 .ConversationDetails {
   background-color: $snow !important;
+  padding-bottom: 30px;
 
   #message-thread .Message:not(:first-child) {
     border-top: 1px solid $grey;
