--- a/app/assets/stylesheets/Inbox.scss
+++ b/app/assets/stylesheets/Inbox.scss
@@ -1,11 +1,29 @@
 @import '_colors.scss';
 
 .Inbox {
-  padding-top: 76px;
+  .searchbox {
+    position: fixed !important;
+    top: 76px !important;
+    width: 100% !important;
+    max-width: 432px !important;
+  }
 
   .conversation-details-wrapper {
+    margin-top: 76px;
     background-color: $snow;
     border-radius: 8px;
     border: 1px solid $grey;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .Inbox {
+    .searchbox {
+      max-width: none !important;
+      left: 0 !important;
+      right: 0 !important;
+      padding-left: 15px !important;
+      padding-right: 15px !important;
+    }
   }
 }
